# napari-mcsim

./: .gitignore  LICENSE  README.md  setup.cfg
napari_mcsim/: mcsim_plugin.py  mcsim_plugin.ui  napari.yaml
