[metadata]
name = napari-mcsim
author = Peter T. Brown
author_email = ptbrown1729@gmail.com
license = BSD-3
license_file = LICENSE
url = https://github.com/QI2lab/napari-mcsim
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari

[options.entry_points]
napari.manifest =
    napari-mcsim = napari_mcsim:napari.yaml

[options.package_data]
napari-mcsim = napari.yaml