[metadata]
name = napari-mcsim
author = Peter T. Brown
author_email = ptbrown1729@gmail.com
license = BSD-3
license_file = LICENSE
url = https://github.com/QI2lab/napari-mcsim
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    napari
    zarr
    tifffile
    mcsim@git+https://git@github.com/qi2lab/mcsim@v1.4.0

# localize_psf is a dependency of both this plugin and mcsim, so let mcsim deal with it

[options.entry_points]
napari.manifest =
    napari-mcsim = napari_mcsim:napari.yaml

[options.package_data]
napari-mcsim = napari.yaml, *.ui
